<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_neihgbour_acvtivity_scroll_view">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.neighbour_list.AboutNeighbourActivity">


        <ImageView
            android:id="@+id/neighbour_picture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintLeft_toLeftOf="@+id/neighbour_picture"
            app:layout_constraintTop_toTopOf="@+id/neighbour_picture"

            />

        <TextView
            android:id="@+id/neighbour_name_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:text="Name"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/neighbour_picture"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neighbour_picture">

            <android.support.constraint.ConstraintLayout
                android:layout_width="390dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name_in_card_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/line_textview"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:alpha="0.1"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_in_card_text_view" />

                <ImageView
                    android:id="@+id/location_imageview"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_location_on_pink_24dp"
                    app:layout_constraintBottom_toTopOf="@+id/phone_image_view"
                    app:layout_constraintStart_toStartOf="@+id/name_in_card_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/line_textview"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/location_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:text="Location"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/location_imageview"
                    app:layout_constraintStart_toEndOf="@+id/location_imageview"
                    app:layout_constraintTop_toTopOf="@+id/location_imageview" />

                <ImageView
                    android:id="@+id/phone_image_view"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_phone_pink_24dp"
                    app:layout_constraintBottom_toTopOf="@+id/internet_image_view"
                    app:layout_constraintStart_toStartOf="@+id/location_imageview"
                    app:layout_constraintTop_toBottomOf="@+id/location_imageview" />

                <TextView
                    android:id="@+id/phone_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:text="Phone Number"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/phone_image_view"
                    app:layout_constraintStart_toEndOf="@+id/phone_image_view"
                    app:layout_constraintTop_toTopOf="@+id/phone_image_view" />

                <ImageView
                    android:id="@+id/internet_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_language_pink_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/phone_image_view"
                    app:layout_constraintTop_toBottomOf="@+id/phone_image_view" />

                <TextView
                    android:id="@+id/internet_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Facebook adresse"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/internet_image_view"
                    app:layout_constraintStart_toEndOf="@+id/internet_image_view"
                    app:layout_constraintTop_toTopOf="@+id/internet_image_view" />


            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/white"
            android:clickable="true"
            android:tint="#FCCA25"
            app:backgroundTint="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neighbour_picture"

            app:srcCompat="@drawable/ic_star_border_white_24dp" />

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/about_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="A propos de moi"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/line_text_view_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:alpha="0.1"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about_text_view" />

                <TextView
                    android:id="@+id/about_me_text_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="About me"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line_text_view_2" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>
</ScrollView>
