
package com.openclassrooms.entrevoisins.neighbour_list;

import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.support.v7.widget.RecyclerView;
import android.widget.TextView;

import com.openclassrooms.entrevoisins.R;
import com.openclassrooms.entrevoisins.ui.neighbour_list.ListNeighbourActivity;
import com.openclassrooms.entrevoisins.utils.DeleteViewAction;

import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.swipeLeft;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static android.support.test.espresso.matcher.ViewMatchers.assertThat;
import static android.support.test.espresso.matcher.ViewMatchers.hasMinimumChildCount;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static com.openclassrooms.entrevoisins.utils.RecyclerViewItemCountAssertion.withItemCount;
import static org.hamcrest.core.IsNull.notNullValue;


/**
 * Test class for list of neighbours
 */
@RunWith(AndroidJUnit4.class)
public class NeighboursListTest {

    // This is fixed
    private static int ITEMS_COUNT = 12;
    private static int FAVORITE_ITEMS_COUNT = 4;

    private ListNeighbourActivity mActivity;

    @Rule
    public ActivityTestRule<ListNeighbourActivity> mActivityRule =
            new ActivityTestRule(ListNeighbourActivity.class);


    @Before

    public void setUp() {
        mActivity = mActivityRule.getActivity();
        assertThat(mActivity, notNullValue());

    }

    /**
     * We ensure that our recyclerview is displaying at least on item
     */
    @Test
    public void myNeighboursList_shouldNotBeEmpty() {
        // First scroll to the position that needs to be matched and click on it.
        onView(withId(R.id.list_neighbours))
                .check(matches(hasMinimumChildCount(1)));
    }

    /**
     * When we delete an item, the item is no more shown
     */
    @Test
    public void myNeighboursList_deleteAction_shouldRemoveItem() {
        // Given : We remove the element at position 2
        onView(withId(R.id.list_neighbours)).check(withItemCount(ITEMS_COUNT));
        // When perform a click on a delete icon
        onView(withId(R.id.list_neighbours))
                .perform(actionOnItemAtPosition(1, new DeleteViewAction()));
        // Then : the number of element is 11
        onView(withId(R.id.list_neighbours)).check(withItemCount(ITEMS_COUNT - 1));
    }

    /**
     * When we click on a neighbour, AboutActivity is launched
     */
    @Test
    public void myNeighbourList_clickOnNeighbour_shouldLaunchAboutActivity() {
        onView(withId(R.id.list_neighbours)).perform(actionOnItemAtPosition(0, click()));
        onView(withId(R.id.about_neihgbour_acvtivity_scroll_view)).check(matches(isDisplayed()));
    }

    /**
     * When Click On neighbour, name text view is displayed
     */
    @Test
    public void aboutActivity_sameNameIsDisplayedInTextView() {
        RecyclerView recyclerView = mActivity.findViewById(R.id.list_neighbours);
        TextView textView = recyclerView.getChildAt(0).findViewById(R.id.item_list_name);
        String name = textView.getText().toString();
        onView(withId(R.id.list_neighbours)).perform(actionOnItemAtPosition(0, click()));
        onView(withId(R.id.neighbour_name_txt_view)).check(matches(isDisplayed()));
        onView(withId(R.id.name_in_card_text_view)).check(matches(isDisplayed()));

        onView(withId(R.id.neighbour_name_txt_view)).check(matches(withText(name)));
    }

    /**
     * When Favorite ViewPager is On , Only favorites are shown
     */
    @Test
    public void myFavoriteNeighbourList_viewPagerOnFavorites_FavoritesOnlyAreDisplayed() {
        onView(withId(R.id.list_neighbours)).perform(swipeLeft());
        onView(withId(R.id.list_favorite_neighbours)).check(withItemCount(FAVORITE_ITEMS_COUNT));
        onView(withId(R.id.list_favorite_neighbours)).perform(actionOnItemAtPosition(0, click()));
        onView(withId(R.id.favorite_button)).perform(click());
        onView(withId(R.id.back_arrow)).perform(click());
        onView(withId(R.id.list_favorite_neighbours)).check(withItemCount(FAVORITE_ITEMS_COUNT - 1));
    }
}